<?php

declare(strict_types=1);

namespace App\Reservations\Domain;

use App\Shared\Domain\AbstractId;

class ScreeningId extends AbstractId
{
}
