<?php

declare(strict_types=1);

namespace App\Reservations\Domain\ScreeningRoom;

use App\Shared\Domain\AbstractId;

class ScreeningRoomId extends AbstractId
{
}
