<?php

declare(strict_types=1);

namespace App\Sales\Domain;

use App\Shared\Domain\AbstractId;

class TicketId extends AbstractId
{
}
